# libkeepass

./: .gitignore  CMakeLists.txt  KeePassConsole.cpp  KeePassFile.cpp  KeePassFile.h  KeePassFileException.cpp  KeePassFileException.h  LICENSE  README.md  keepassconsole.cpp  keepassfileexception.h  todo.txt  unit_tests.cpp
cmake/Modules/: FindBotan.cmake
doc/: keepass_format.txt
spec/: kpass.md
src/: KeePassFileException.cpp  KeePassFileSettings.cpp  KeePassFileSettings.h
src/test/: unit_tests.cpp
src/test/test_data/: kp_1.kdbx
